--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Project: Calculator
+Org/Course: The Odin Project
+Related files: index.html, javascript.js, README.md, calculation.txt
+Date Started: July 29, 2022
+Recent Update: January 23, 2023
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
 @font-face {
     font-family: Walkway;
     src: url(Walkway\ SemiBold.ttf);
