--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ button {
 }
 
 button:hover {
-    background-color: darkcyan;
+    background-color: rgb(0, 187, 187);
+    color:rgb(226, 226, 226);
     box-shadow: 0 8px 12px 0 rgba(47,79,79,0.24);
 }
 
